# 704_odyssey_engine

./: .env.example  .gitignore  DEVELOPMENT.md  DIRECT_RESEARCH_GUIDE.md  JSON_PARSING_IMPROVEMENTS.md  LICENSE  MAX_REMOTE_CALLS_ANALYSIS.md  PROJECT_STATUS.md  README.md  debug_clarifying_questions.py  example.py  google_gemini_veo3_multiple_prompts.ipynb  main.py  new_research.py  pyproject.toml  requirements.txt  run_integration_tests.py  run_intent_tests.py  setup.sh  simple_research.py  test_data_gatherer_fix.py  test_full_research.py  test_grounding.py  test_json_improvements.py  test_json_serialization.py  test_max_remote_calls.py  test_quick_research.py  test_sources_final.py
.github/: copilot-instructions.md
config/: default.conf
reports/: .gitkeep
sessions/: .gitkeep
src/: __init__.py
src/cli/: __init__.py  interface.py
src/core/: __init__.py  data_gatherer.py  engine.py  intent_analyzer.py  report_generator.py
src/utils/: __init__.py  confidence.py  gemini_client.py  storage.py  web_scraper.py
tests/: test_full_pipeline_longest_path.py  test_intent_analyzer.py  test_intent_analyzer_integration.py  test_odyssey_engine.py
